# YOWR3HT8H3D9HW9O3O9T

./: .eslintignore  .eslintrc.cjs  Bug errors_827pm110525.txt  CONTRIBUTING.md  HLSF_Database_2025-10-15.json  HLSF_Database_2025-10-17 (1).json  HLSF_Database_2025-10-17 (2).json  HLSF_Database_2025-10-17.json  HLSF_Database_2025-10-18 (5).json  HLSF_Database_2025-10-18.json  HLSF_Database_2025-10-19.json  HLSF_Database_2025-10-23.json  HLSF_Glyph_Ledger_2025-10-17.json  Production Notes_909am103025.txt  README.md  hlsf_partition.py  improved_hlsf_engine (1).html  improved_hlsf_engine (2).html  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.test.json  tsconfig.typecheck.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ADJACENCY_RELATIONSHIP_TYPES.md  ARCHITECTURE.md  BACKEND_HARDENING.md  DATA_PROCESSING.md  EMBEDDING_TAGS.md  FLUTTER_TTS_WINDOWS_EXCLUSION.md  HLSF_EMERGENT_TRACE.md  REVERT_INSTRUCTIONS.md  local-hlsf-response.txt
hlsf_db_tools/: __init__.py  adjacency_families.py  chunker.py  partition.py  symbols.py
hlsf_db_tools/data/: symbols.json
public/: landing-fallback.js
remote-db/: metadata.json  token-index.json
remote-db/chunks/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  (+29 more)
scripts/: apply_flutter_tts_windows_fix.py  import_hlsf_database.py  npm-run.sh  patch-typescript-eslint.mjs  process_latest_db.py  test-watch.mjs
server/: index.js
src/: app.ts  settings.test.ts  settings.ts  styles.css
tests/: test_chunker.py  test_hlsf_partition.py
types/: node-test.d.ts
(+153 files in other folders)
